--- a/test-output/old/TestSuite/methods.html
+++ b/test-output/old/TestSuite/methods.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6d7074">  <td>18/05/02 15:34:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTests.setupClass(java.lang.String)[pri:0, instance:com.lua.webbuyer.selenium.webbuyer.LoginPageTests@69a3d1d]">&gt;&gt;setupClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@242355057</td>   <td></td> </tr>
-<tr bgcolor="6d7074">  <td>18/05/02 15:34:14</td>   <td>11954</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTests.testingBuyer(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.lua.webbuyer.selenium.webbuyer.LoginPageTests@69a3d1d]">testingBuyer</td> 
-  <td>main@242355057</td>   <td></td> </tr>
+<tr bgcolor="6d7074">  <td>18/05/02 18:11:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBuyer.setupClass(java.lang.String, java.lang.String)[pri:0, instance:com.lua.webbuyer.selenium.webbuyer.TestBuyer@c46bcd4]">&gt;&gt;setupClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1957502751</td>   <td></td> </tr>
+<tr bgcolor="6d7074">  <td>18/05/02 18:11:58</td>   <td>11315</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestBuyer.testeCompra(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.lua.webbuyer.selenium.webbuyer.TestBuyer@c46bcd4]">testeCompra</td> 
+  <td>main@1957502751</td>   <td></td> </tr>
+<tr bgcolor="707e96">  <td>18/05/02 18:12:23</td>   <td>36362</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTests.setupClass(java.lang.String, java.lang.String)[pri:0, instance:com.lua.webbuyer.selenium.webbuyer.LoginPageTests@2a556333]">&gt;&gt;setupClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1957502751</td>   <td></td> </tr>
+<tr bgcolor="707e96">  <td>18/05/02 18:12:23</td>   <td>36399</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTests.testingBuyer(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.lua.webbuyer.selenium.webbuyer.LoginPageTests@2a556333]">testingBuyer</td> 
+  <td>main@1957502751</td>   <td></td> </tr>
 </table>
