--- a/test-output/old/TestSuite/methods-alphabetical.html
+++ b/test-output/old/TestSuite/methods-alphabetical.html
@@ -1,12 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6d7074">  <td>18/05/02 18:11:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBuyer.setupClass(java.lang.String, java.lang.String)[pri:0, instance:com.lua.webbuyer.selenium.webbuyer.TestBuyer@c46bcd4]">&gt;&gt;setupClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1957502751</td>   <td></td> </tr>
-<tr bgcolor="707e96">  <td>18/05/02 18:12:23</td>   <td>36362</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTests.setupClass(java.lang.String, java.lang.String)[pri:0, instance:com.lua.webbuyer.selenium.webbuyer.LoginPageTests@2a556333]">&gt;&gt;setupClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1957502751</td>   <td></td> </tr>
-<tr bgcolor="6d7074">  <td>18/05/02 18:11:58</td>   <td>11315</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestBuyer.testeCompra(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.lua.webbuyer.selenium.webbuyer.TestBuyer@c46bcd4]">testeCompra</td> 
-  <td>main@1957502751</td>   <td></td> </tr>
-<tr bgcolor="707e96">  <td>18/05/02 18:12:23</td>   <td>36399</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTests.testingBuyer(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.lua.webbuyer.selenium.webbuyer.LoginPageTests@2a556333]">testingBuyer</td> 
-  <td>main@1957502751</td>   <td></td> </tr>
+<tr bgcolor="b4fa71">  <td>18/05/02 23:54:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBuyer.endSession()[pri:0, instance:com.lua.webbuyer.selenium.webbuyer.TestBuyer@4116aac9]">&lt;&lt;endSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="f5eeab">  <td>18/05/02 23:59:00</td>   <td>274547</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestLoginPage.endSession()[pri:0, instance:com.lua.webbuyer.selenium.webbuyer.TestLoginPage@ba2f4ec]">&lt;&lt;endSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="b4fa71">  <td>18/05/02 23:53:02</td>   <td>-84161</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBuyer.setupClass(java.lang.String, java.lang.String)[pri:0, instance:com.lua.webbuyer.selenium.webbuyer.TestBuyer@4116aac9]">&gt;&gt;setupClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="f5eeab">  <td>18/05/02 23:54:37</td>   <td>10950</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestLoginPage.setupClass(java.lang.String, java.lang.String)[pri:0, instance:com.lua.webbuyer.selenium.webbuyer.TestLoginPage@ba2f4ec]">&gt;&gt;setupClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="b4fa71">  <td>18/05/02 23:53:21</td>   <td>-65194</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestBuyer.testeCompraSequencial(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.lua.webbuyer.selenium.webbuyer.TestBuyer@4116aac9]">testeCompraSequencial</td> 
+  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="f5eeab">  <td>18/05/02 23:54:54</td>   <td>27782</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestLoginPage.testingBuyer(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.lua.webbuyer.selenium.webbuyer.TestLoginPage@ba2f4ec]">testingBuyer</td> 
+  <td>main@422330142</td>   <td></td> </tr>
 </table>
