--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -31,40 +31,36 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Teste Compras</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">359.5 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Teste Compras</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">58.9 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
+<tr><th colspan="4">Teste Compras &#8212; failed (configuration methods)</th></tr>
+<tr class="failedodd"><td rowspan="1">com.lua.webbuyer.test.TestBuyer</td><td><a href="#m1"><b>endSession</b>  </a></td><td class="numi">1</td><td>1525468445288</td><td class="numi">0</td></tr>
 <tr><th colspan="4">Teste Compras &#8212; failed</th></tr>
-<tr class="failedodd"><td rowspan="1">com.lua.webbuyer.selenium.webbuyer.TestBuyer</td><td><a href="#m1"><b>testeCompraSequencial</b>  </a></td><td class="numi">1</td><td>1525316001083</td><td class="numi">65155</td></tr>
-<tr><th colspan="4">Teste Compras &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="1">com.lua.webbuyer.selenium.webbuyer.TestLoginPage</td><td><a href="#m2"><b>testingBuyer</b>  </a></td><td class="numi">1</td><td>1525316094059</td><td class="numi">246760</td></tr>
+<tr class="failedodd"><td rowspan="1">com.lua.webbuyer.test.TestBuyer</td><td><a href="#m2"><b>testeCompraSequencial</b>  </a></td><td class="numi">1</td><td>1525468386429</td><td class="numi">58839</td></tr>
 </table>
 <h1>Teste Compras</h1>
-<h2 id="m1">com.lua.webbuyer.selenium.webbuyer.TestBuyer:testeCompraSequencial</h2>
+<h2 id="m1">com.lua.webbuyer.test.TestBuyer:endSession</h2>
+<div style="padding-left:3em">
+<p>null</p>
+com.lua.webbuyer.utils.Driver.finalyzeClass(Driver.java:31)
+<br/>at com.lua.webbuyer.test.TestBuyer.endSession(TestBuyer.java:25)
+<br/>23 lines not shown
+</div>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m2">com.lua.webbuyer.test.TestBuyer:testeCompraSequencial</h2>
 <table cellspacing="0" cellpadding="0" class="result">
-<tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th></tr>
-<tr class="param stripe"><td>nakas_ndr@mailinator.com</td>
-<td>123456</td>
+<tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr>
+<tr class="param stripe"><td>Firefox</td>
 <td>Pijama Snacks</td>
-<td>11682</td>
-<td>03279120</td>
-<td>https://kurastore.lua.net/</td>
 </tr>
-<tr><td style="padding-left:3em" colspan="6">
+<tr><td style="padding-left:3em" colspan="2">
 <p>Teste Failed: Expected condition failed: waiting for presence of element located by: By.xpath: .//button[text()[contains(.,&apos;Finalizar Compra&apos;)]] (tried for 30 second(s) with 1000 milliseconds interval)</p>
-com.lua.webbuyer.selenium.webbuyer.TestBuyer.testeCompraSequencial(TestBuyer.java:37)
+com.lua.webbuyer.actions.ActionsBuyer.productBuy(ActionsBuyer.java:49)
+<br/>at com.lua.webbuyer.test.TestBuyer.testeCompraSequencial(TestBuyer.java:39)
 <br/>1 lines not shown
 </td></tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">com.lua.webbuyer.selenium.webbuyer.TestLoginPage:testingBuyer</h2>
-<table cellspacing="0" cellpadding="0" class="result">
-<tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr>
-<tr class="param stripe"><td>123456</td>
-<td>nakas_ndr@mailinator.com</td>
-<td>https://kurastore.lua.net/</td>
-</tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
