--- a/test-output/index.html
+++ b/test-output/index.html
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
+                    <span class="method-stats">1 method, 1 failed,   </span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -101,24 +101,10 @@
                     <div class="method-list-content failed suite-TestSuite">
                       <span>
                         <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-TestSuite" title="com.lua.webbuyer.selenium.webbuyer.TestBuyer" hash-for-method="testeCompraSequencial(nakas_ndr@mailinator.com, 123456, Pijama Snacks, 11682, 03279120, https://kurastore.lua.net/)">testeCompraSequencial(nakas_ndr@mailinator.com, 123456, Pijama Snacks, 11682, 03279120, https://kurastore.lua.net/)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-TestSuite" title="com.lua.webbuyer.test.TestBuyer" hash-for-method="testeCompraSequencial(Firefox, Pijama Snacks)">testeCompraSequencial(Firefox, Pijama Snacks)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-TestSuite -->
-                  </li>
-                  <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-TestSuite" class="hide-methods passed suite-TestSuite"> (hide)</a> <!-- hide-methods passed suite-TestSuite -->
-                      <a href="#" panel-name="suite-TestSuite" class="show-methods passed suite-TestSuite"> (show)</a> <!-- show-methods passed suite-TestSuite -->
-                    </span>
-                    <div class="method-list-content passed suite-TestSuite">
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-TestSuite" title="com.lua.webbuyer.selenium.webbuyer.TestLoginPage" hash-for-method="testingBuyer(123456, nakas_ndr@mailinator.com, https://kurastore.lua.net/)">testingBuyer(123456, nakas_ndr@mailinator.com, https://kurastore.lua.net/)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content passed suite-TestSuite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -133,45 +119,31 @@
           <div class="suite-TestSuite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">com.lua.webbuyer.selenium.webbuyer.TestBuyer</span>
+              <span class="class-name">com.lua.webbuyer.test.TestBuyer</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testeCompraSequencial(nakas_ndr@mailinator.com, 123456, Pijama Snacks, 11682, 03279120, https://kurastore.lua.net/)">
-                  </a> <!-- testeCompraSequencial(nakas_ndr@mailinator.com, 123456, Pijama Snacks, 11682, 03279120, https://kurastore.lua.net/) -->
+                  <a name="testeCompraSequencial(Firefox, Pijama Snacks)">
+                  </a> <!-- testeCompraSequencial(Firefox, Pijama Snacks) -->
                   <span class="method-name">testeCompraSequencial</span>
-                  <span class="parameters">(nakas_ndr@mailinator.com, 123456, Pijama Snacks, 11682, 03279120, https://kurastore.lua.net/)</span>
+                  <span class="parameters">(Firefox, Pijama Snacks)</span>
                   <div class="stack-trace"><b>"java.lang.AssertionError: Teste Failed: Expected condition failed: waiting for presence of element located by: By.xpath: .//button[text()[contains(.,&apos;Finalizar Compra&apos;)]] (tried for 30 second(s) with 1000 milliseconds interval)
-	at com.lua.webbuyer.selenium.webbuyer.TestBuyer.testeCompraSequencial(TestBuyer.java:37)
+	at com.lua.webbuyer.actions.ActionsBuyer.productBuy(ActionsBuyer.java:49)
+	at com.lua.webbuyer.test.TestBuyer.testeCompraSequencial(TestBuyer.java:39)
 <br/> java.lang.AssertionError: Teste Failed: Expected condition failed: waiting for presence of element located by: By.xpath: .//button[text()[contains(.,&apos;Finalizar Compra&apos;)]] (tried for 30 second(s) with 1000 milliseconds interval)
-	at com.lua.webbuyer.selenium.webbuyer.TestBuyer.testeCompraSequencial(TestBuyer.java:37)
-"</b><br>com.lua.webbuyer.selenium.webbuyer.TestBuyer.testeCompraSequencial(TestBuyer.java:37)<br>
+	at com.lua.webbuyer.actions.ActionsBuyer.productBuy(ActionsBuyer.java:49)
+	at com.lua.webbuyer.test.TestBuyer.testeCompraSequencial(TestBuyer.java:39)
+"</b><br>com.lua.webbuyer.actions.ActionsBuyer.productBuy(ActionsBuyer.java:49)<br>com.lua.webbuyer.test.TestBuyer.testeCompraSequencial(TestBuyer.java:39)<br>
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-TestSuite-class-failed -->
-          <div class="suite-TestSuite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.lua.webbuyer.selenium.webbuyer.TestLoginPage</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="testingBuyer(123456, nakas_ndr@mailinator.com, https://kurastore.lua.net/)">
-                  </a> <!-- testingBuyer(123456, nakas_ndr@mailinator.com, https://kurastore.lua.net/) -->
-                  <span class="method-name">testingBuyer</span>
-                  <span class="parameters">(123456, nakas_ndr@mailinator.com, https://kurastore.lua.net/)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-TestSuite-class-passed -->
         </div> <!-- panel TestSuite -->
         <div panel-name="test-xml-TestSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/Users/andre.martines/eclipse-workspace/ProjetoLua/Lua_Automation/src/SeleniumSources/SeleniumData.xml</span>
+            <span class="header-content">/Users/andremartines/eclipse-workspace/Lua_Automation/src/SeleniumSources/SeleniumData.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -179,20 +151,14 @@
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite thread-count=&quot;3&quot; name=&quot;TestSuite&quot;&gt;
   &lt;listeners&gt;
-    &lt;listener class-name=&quot;com.lua.webbuyer.utils.ExtentReports_Listner&quot;/&gt;
+    &lt;listener class-name=&quot;com.lua.webbuyer.listners.AnnotationTransformer&quot;/&gt;
   &lt;/listeners&gt;
   &lt;test name=&quot;Teste Compras&quot;&gt;
-    &lt;parameter name=&quot;password&quot; value=&quot;123456&quot;/&gt;
     &lt;parameter name=&quot;itemColorCode&quot; value=&quot;11682&quot;/&gt;
     &lt;parameter name=&quot;Product&quot; value=&quot;Pijama Snacks&quot;/&gt;
-    &lt;parameter name=&quot;user&quot; value=&quot;nakas_ndr@mailinator.com&quot;/&gt;
-    &lt;parameter name=&quot;URL&quot; value=&quot;https://kurastore.lua.net/&quot;/&gt;
     &lt;parameter name=&quot;Browser&quot; value=&quot;Firefox&quot;/&gt;
-    &lt;parameter name=&quot;cep&quot; value=&quot;03279120&quot;/&gt;
-    &lt;parameter name=&quot;itemToSelect&quot; value=&quot;Camisola Fruit&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.lua.webbuyer.selenium.webbuyer.TestBuyer&quot;/&gt;
-      &lt;class name=&quot;com.lua.webbuyer.selenium.webbuyer.TestLoginPage&quot;/&gt;
+      &lt;class name=&quot;com.lua.webbuyer.test.TestBuyer&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Teste Compras --&gt;
 &lt;/suite&gt; &lt;!-- TestSuite --&gt;
@@ -206,7 +172,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Teste Compras (2 classes)</span>
+                <span class="test-name">Teste Compras (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -232,20 +198,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testingBuyer')
-data.setCell(0, 2, 'com.lua.webbuyer.selenium.webbuyer.TestLoginPage')
-data.setCell(0, 3, 246760);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testeCompraSequencial')
-data.setCell(1, 2, 'com.lua.webbuyer.selenium.webbuyer.TestBuyer')
-data.setCell(1, 3, 65155);
+data.setCell(0, 1, 'testeCompraSequencial')
+data.setCell(0, 2, 'com.lua.webbuyer.test.TestBuyer')
+data.setCell(0, 3, 58839);
 window.suiteTableData['TestSuite']= { tableData: data, tableDiv: 'times-div-TestSuite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 minutes</span>
+              <span class="suite-total-time">Total running time: 58 seconds</span>
               <div id="times-div-TestSuite">
               </div> <!-- times-div-TestSuite -->
             </div> <!-- times-div -->
@@ -271,36 +233,35 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.lua.webbuyer.selenium.webbuyer.TestBuyer</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">setupClass(Firefox, https://kurastore.lua.net/)</span>
+              <div class="chronological-class-name">com.lua.webbuyer.test.TestBuyer</div> <!-- chronological-class-name -->
+              <div class="configuration-suite before">
+                <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
+              </div> <!-- configuration-suite before -->
+              <div class="configuration-method before">
+                <span class="method-name">register(public void com.lua.webbuyer.test.TestBuyer.testeCompraSequencial(java.lang.String,java.lang.String))</span>
+                <span class="method-start">384 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">testeCompraSequencial(nakas_ndr@mailinator.com, 123456, Pijama Snacks, 11682, 03279120, https://kurastore.lua.net/)</span>
-                <span class="method-start">18971 ms</span>
+                <span class="method-name">testeCompraSequencial(Firefox, Pijama Snacks)</span>
+                <span class="method-start">401 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-class after">
+              <div class="configuration-method after">
+                <span class="method-name">getResult([TestResult name=testeCompraSequencial status=FAILURE method=TestBuyer.testeCompraSequencial(java.la...)</span>
+                <span class="method-start">59244 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-test after">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">endSession</span>
-                <span class="method-start">84161 ms</span>
-              </div> <!-- configuration-class after -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.lua.webbuyer.selenium.webbuyer.TestLoginPage</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">setupClass(Firefox, https://kurastore.lua.net/)</span>
-                <span class="method-start">95114 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="test-method">
-                <span class="method-name">testingBuyer(123456, nakas_ndr@mailinator.com, https://kurastore.lua.net/)</span>
-                <span class="method-start">111947 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">endSession</span>
-                <span class="method-start">358712 ms</span>
-              </div> <!-- configuration-class after -->
+                <span class="method-start">59260 ms</span>
+              </div> <!-- configuration-test after -->
+              <div class="configuration-suite after">
+                <span class="method-name">cleanUp</span>
+                <span class="method-start">59286 ms</span>
+              </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
