--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b8a0b8">  <td>18/04/13 17:32:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestApp.setupClass()[pri:0, instance:com.lua.webbuyer.selenium.webbuyer.TestApp@7a765367]">&gt;&gt;setupClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@988458918</td>   <td></td> </tr>
+<tr bgcolor="729d65">  <td>18/05/04 17:47:46</td>   <td>0</td> <td title="&lt;&lt;DummyForExReport.cleanUp()[pri:0, instance:com.lua.webbuyer.extent.reports.DummyForExReport@367ffa75]">&lt;&lt;cleanUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@63390</td>   <td></td> </tr>
+<tr bgcolor="729d65">  <td>18/05/04 17:46:48</td>   <td>-57364</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DummyForExReport.getResult(org.testng.ITestResult)[pri:0, instance:com.lua.webbuyer.extent.reports.DummyForExReport@367ffa75]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@63390</td>   <td></td> </tr>
+<tr bgcolor="729d65">  <td>18/05/04 17:47:39</td>   <td>-6138</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DummyForExReport.getResult(org.testng.ITestResult)[pri:0, instance:com.lua.webbuyer.extent.reports.DummyForExReport@367ffa75]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@63390</td>   <td></td> </tr>
+<tr bgcolor="729d65">  <td>18/05/04 17:46:48</td>   <td>-57451</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DummyForExReport.methodOne()[pri:0, instance:com.lua.webbuyer.extent.reports.DummyForExReport@367ffa75]">methodOne</td> 
+  <td>main@63390</td>   <td></td> </tr>
+<tr bgcolor="729d65">  <td>18/05/04 17:47:39</td>   <td>-6170</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DummyForExReport.methodTwo()[pri:0, instance:com.lua.webbuyer.extent.reports.DummyForExReport@367ffa75]">methodTwo</td> 
+  <td>main@63390</td>   <td></td> </tr>
+<tr bgcolor="729d65">  <td>18/05/04 17:46:38</td>   <td>-67555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DummyForExReport.register(java.lang.reflect.Method)[pri:0, instance:com.lua.webbuyer.extent.reports.DummyForExReport@367ffa75]">&gt;&gt;register</td> 
+<td>&nbsp;</td>  <td>main@63390</td>   <td></td> </tr>
+<tr bgcolor="729d65">  <td>18/05/04 17:47:32</td>   <td>-14011</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DummyForExReport.register(java.lang.reflect.Method)[pri:0, instance:com.lua.webbuyer.extent.reports.DummyForExReport@367ffa75]">&gt;&gt;register</td> 
+<td>&nbsp;</td>  <td>main@63390</td>   <td></td> </tr>
+<tr bgcolor="729d65">  <td>18/05/04 17:46:10</td>   <td>-95291</td> <td title="&gt;&gt;DummyForExReport.setup()[pri:0, instance:com.lua.webbuyer.extent.reports.DummyForExReport@367ffa75]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@63390</td>   <td></td> </tr>
 </table>
