--- a/test-output/old/TestSuite/methods.html
+++ b/test-output/old/TestSuite/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b4fa71">  <td>18/05/02 23:53:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBuyer.setupClass(java.lang.String, java.lang.String)[pri:0, instance:com.lua.webbuyer.selenium.webbuyer.TestBuyer@4116aac9]">&gt;&gt;setupClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
-<tr bgcolor="b4fa71">  <td>18/05/02 23:53:21</td>   <td>18967</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestBuyer.testeCompraSequencial(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.lua.webbuyer.selenium.webbuyer.TestBuyer@4116aac9]">testeCompraSequencial</td> 
-  <td>main@422330142</td>   <td></td> </tr>
-<tr bgcolor="b4fa71">  <td>18/05/02 23:54:26</td>   <td>84161</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBuyer.endSession()[pri:0, instance:com.lua.webbuyer.selenium.webbuyer.TestBuyer@4116aac9]">&lt;&lt;endSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
-<tr bgcolor="f5eeab">  <td>18/05/02 23:54:37</td>   <td>95111</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestLoginPage.setupClass(java.lang.String, java.lang.String)[pri:0, instance:com.lua.webbuyer.selenium.webbuyer.TestLoginPage@ba2f4ec]">&gt;&gt;setupClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
-<tr bgcolor="f5eeab">  <td>18/05/02 23:54:54</td>   <td>111943</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestLoginPage.testingBuyer(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.lua.webbuyer.selenium.webbuyer.TestLoginPage@ba2f4ec]">testingBuyer</td> 
-  <td>main@422330142</td>   <td></td> </tr>
-<tr bgcolor="f5eeab">  <td>18/05/02 23:59:00</td>   <td>358708</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestLoginPage.endSession()[pri:0, instance:com.lua.webbuyer.selenium.webbuyer.TestLoginPage@ba2f4ec]">&lt;&lt;endSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="f19d6e">  <td>18/05/04 18:13:06</td>   <td>0</td> <td title="&gt;&gt;DummyForExReport.setup()[pri:0, instance:com.lua.webbuyer.test.TestBuyer@3cb1ffe6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2011986105</td>   <td></td> </tr>
+<tr bgcolor="f19d6e">  <td>18/05/04 18:13:06</td>   <td>382</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DummyForExReport.register(java.lang.reflect.Method)[pri:0, instance:com.lua.webbuyer.test.TestBuyer@3cb1ffe6]">&gt;&gt;register</td> 
+<td>&nbsp;</td>  <td>main@2011986105</td>   <td></td> </tr>
+<tr bgcolor="77b7b6">  <td>18/05/04 18:13:06</td>   <td>400</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestBuyer.testeCompraSequencial(java.lang.String, java.lang.String)[pri:0, instance:com.lua.webbuyer.test.TestBuyer@3cb1ffe6]">testeCompraSequencial</td> 
+  <td>main@2011986105</td>   <td></td> </tr>
+<tr bgcolor="f19d6e">  <td>18/05/04 18:14:05</td>   <td>59242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DummyForExReport.getResult(org.testng.ITestResult)[pri:0, instance:com.lua.webbuyer.test.TestBuyer@3cb1ffe6]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@2011986105</td>   <td></td> </tr>
+<tr bgcolor="77b7b6">  <td>18/05/04 18:14:05</td>   <td>59258</td> <td>&nbsp;</td><td title="&lt;&lt;TestBuyer.endSession()[pri:0, instance:com.lua.webbuyer.test.TestBuyer@3cb1ffe6]">&lt;&lt;endSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2011986105</td>   <td></td> </tr>
+<tr bgcolor="f19d6e">  <td>18/05/04 18:14:05</td>   <td>59284</td> <td title="&lt;&lt;DummyForExReport.cleanUp()[pri:0, instance:com.lua.webbuyer.test.TestBuyer@3cb1ffe6]">&lt;&lt;cleanUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2011986105</td>   <td></td> </tr>
 </table>
