--- a/test-output/old/TestSuite/methods-alphabetical.html
+++ b/test-output/old/TestSuite/methods-alphabetical.html
@@ -1,16 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f19d6e">  <td>18/05/04 18:14:05</td>   <td>0</td> <td title="&lt;&lt;DummyForExReport.cleanUp()[pri:0, instance:com.lua.webbuyer.test.TestBuyer@3cb1ffe6]">&lt;&lt;cleanUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2011986105</td>   <td></td> </tr>
-<tr bgcolor="77b7b6">  <td>18/05/04 18:14:05</td>   <td>-26</td> <td>&nbsp;</td><td title="&lt;&lt;TestBuyer.endSession()[pri:0, instance:com.lua.webbuyer.test.TestBuyer@3cb1ffe6]">&lt;&lt;endSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2011986105</td>   <td></td> </tr>
-<tr bgcolor="f19d6e">  <td>18/05/04 18:14:05</td>   <td>-42</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DummyForExReport.getResult(org.testng.ITestResult)[pri:0, instance:com.lua.webbuyer.test.TestBuyer@3cb1ffe6]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@2011986105</td>   <td></td> </tr>
-<tr bgcolor="f19d6e">  <td>18/05/04 18:13:06</td>   <td>-58902</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DummyForExReport.register(java.lang.reflect.Method)[pri:0, instance:com.lua.webbuyer.test.TestBuyer@3cb1ffe6]">&gt;&gt;register</td> 
-<td>&nbsp;</td>  <td>main@2011986105</td>   <td></td> </tr>
-<tr bgcolor="f19d6e">  <td>18/05/04 18:13:06</td>   <td>-59284</td> <td title="&gt;&gt;DummyForExReport.setup()[pri:0, instance:com.lua.webbuyer.test.TestBuyer@3cb1ffe6]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2011986105</td>   <td></td> </tr>
-<tr bgcolor="77b7b6">  <td>18/05/04 18:13:06</td>   <td>-58884</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestBuyer.testeCompraSequencial(java.lang.String, java.lang.String)[pri:0, instance:com.lua.webbuyer.test.TestBuyer@3cb1ffe6]">testeCompraSequencial</td> 
-  <td>main@2011986105</td>   <td></td> </tr>
+<tr bgcolor="7cdd8a">  <td>18/05/07 18:34:13</td>   <td>0</td> <td title="&lt;&lt;DummyForExReport.cleanUp()[pri:0, instance:com.lua.webbuyer.test.TestBuyer@3dfc5fb8]">&lt;&lt;cleanUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@171497379</td>   <td></td> </tr>
+<tr bgcolor="77b7b6">  <td>18/05/07 18:34:13</td>   <td>-178</td> <td>&nbsp;</td><td title="&lt;&lt;TestBuyer.endSession()[pri:0, instance:com.lua.webbuyer.test.TestBuyer@3dfc5fb8]">&lt;&lt;endSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@171497379</td>   <td></td> </tr>
+<tr bgcolor="7cdd8a">  <td>18/05/07 18:33:10</td>   <td>-63013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DummyForExReport.getResult(org.testng.ITestResult)[pri:0, instance:com.lua.webbuyer.test.TestBuyer@3dfc5fb8]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@171497379</td>   <td></td> </tr>
+<tr bgcolor="7cdd8a">  <td>18/05/07 18:34:12</td>   <td>-1492</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DummyForExReport.getResult(org.testng.ITestResult)[pri:0, instance:com.lua.webbuyer.test.TestLoginPage@3d921e20]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@171497379</td>   <td></td> </tr>
+<tr bgcolor="7cdd8a">  <td>18/05/07 18:32:10</td>   <td>-123152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DummyForExReport.register(java.lang.reflect.Method, java.lang.String)[pri:0, instance:com.lua.webbuyer.test.TestBuyer@3dfc5fb8]">&gt;&gt;register</td> 
+<td>&nbsp;</td>  <td>main@171497379</td>   <td></td> </tr>
+<tr bgcolor="7cdd8a">  <td>18/05/07 18:33:12</td>   <td>-61690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DummyForExReport.register(java.lang.reflect.Method, java.lang.String)[pri:0, instance:com.lua.webbuyer.test.TestLoginPage@3d921e20]">&gt;&gt;register</td> 
+<td>&nbsp;</td>  <td>main@171497379</td>   <td></td> </tr>
+<tr bgcolor="7cdd8a">  <td>18/05/07 18:32:09</td>   <td>-123759</td> <td title="&gt;&gt;DummyForExReport.setup()[pri:0, instance:com.lua.webbuyer.test.TestBuyer@3dfc5fb8]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@171497379</td>   <td></td> </tr>
+<tr bgcolor="77b7b6">  <td>18/05/07 18:32:18</td>   <td>-114760</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestBuyer.testeCompraSequencial(java.lang.String, java.lang.String)[pri:0, instance:com.lua.webbuyer.test.TestBuyer@3dfc5fb8]">testeCompraSequencial</td> 
+  <td>main@171497379</td>   <td></td> </tr>
+<tr bgcolor="669c6a">  <td>18/05/07 18:33:17</td>   <td>-55999</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestLoginPage.testeCompradois(java.lang.String, java.lang.String)[pri:0, instance:com.lua.webbuyer.test.TestLoginPage@3d921e20]">testeCompradois</td> 
+  <td>main@171497379</td>   <td></td> </tr>
 </table>
