Projeto completamente reestruturado

--- a/test-output/old/TestSuite/classes.html
+++ b/test-output/old/TestSuite/classes.html
@@ -41,8 +41,9 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testeCompraSequencial</td>
-<td>&nbsp;</td></tr>
+<td>compraSequencial</td>
+<td>Testes de compra </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
