--- a/test-output/old/TestSuite/methods-not-run.html
+++ b/test-output/old/TestSuite/methods-not-run.html
@@ -1,4 +1,4 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>com.lua.webbuyer.extent.reports.DummyForExReport.setup</td></tr>
-<tr><td>com.lua.webbuyer.extent.reports.DummyForExReport.cleanUp</td></tr>
+<tr><td>com.lua.webbuyer.extent.reports.ReportsExtend.cleanUp</td></tr>
+<tr><td>com.lua.webbuyer.extent.reports.ReportsExtend.setup</td></tr>
 </table>
