--- a/test-output/index.html
+++ b/test-output/index.html
@@ -23,7 +23,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 2 failed tests</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-TestSuite">
-                    <span>SeleniumData.xml</span>
+                    <span>TestRunner.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -58,7 +58,7 @@
                 </li>
                 <li>
                   <a href="#" class="navigator-link " panel-name="group-TestSuite">
-                    <span>0 groups</span>
+                    <span>1 group</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods, 2 failed,   </span>
+                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -101,15 +101,24 @@
                     <div class="method-list-content failed suite-TestSuite">
                       <span>
                         <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-TestSuite" title="com.lua.webbuyer.test.TestBuyer" hash-for-method="testeCompraSequencial(Firefox, dfvfdvdv)">testeCompraSequencial(Firefox, dfvfdvdv)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-TestSuite" title="com.lua.webbuyer.test.TestLoginPage" hash-for-method="testeCompradois(Firefox, dfvfdvdv)">testeCompradois(Firefox, dfvfdvdv)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-TestSuite" title="com.lua.webbuyer.test.TestBuyer" hash-for-method="compraSequencial(Firefox, Pijama Snacks)">compraSequencial(Firefox, Pijama Snacks)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-TestSuite -->
+                  </li>
+                  <li>
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-TestSuite" class="hide-methods passed suite-TestSuite"> (hide)</a> <!-- hide-methods passed suite-TestSuite -->
+                      <a href="#" panel-name="suite-TestSuite" class="show-methods passed suite-TestSuite"> (show)</a> <!-- show-methods passed suite-TestSuite -->
+                    </span>
+                    <div class="method-list-content passed suite-TestSuite">
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-TestSuite" title="com.lua.webbuyer.test.TestLoginPage" hash-for-method="testeCompradois(Firefox, Pijama Snacks)">testeCompradois(Firefox, Pijama Snacks)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content passed suite-TestSuite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -129,50 +138,42 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testeCompraSequencial(Firefox, dfvfdvdv)">
-                  </a> <!-- testeCompraSequencial(Firefox, dfvfdvdv) -->
-                  <span class="method-name">testeCompraSequencial</span>
-                  <span class="parameters">(Firefox, dfvfdvdv)</span>
-                  <div class="stack-trace"><b>"java.lang.AssertionError: Test Failed: Produto não encontrado: dfvfdvdv
-	at com.lua.webbuyer.actions.ActionsBuyer.productBuy(ActionsBuyer.java:68)
-	at com.lua.webbuyer.test.TestBuyer.testeCompraSequencial(TestBuyer.java:39)
-<br/> java.lang.AssertionError: Test Failed: Produto não encontrado: dfvfdvdv
-	at com.lua.webbuyer.actions.ActionsBuyer.productBuy(ActionsBuyer.java:68)
-	at com.lua.webbuyer.test.TestBuyer.testeCompraSequencial(TestBuyer.java:39)
-"</b><br>com.lua.webbuyer.actions.ActionsBuyer.productBuy(ActionsBuyer.java:68)<br>com.lua.webbuyer.test.TestBuyer.testeCompraSequencial(TestBuyer.java:39)<br>
+                  <a name="compraSequencial(Firefox, Pijama Snacks)">
+                  </a> <!-- compraSequencial(Firefox, Pijama Snacks) -->
+                  <span class="method-name">compraSequencial</span>
+                  <span class="parameters">(Firefox, Pijama Snacks)</span>
+                  <div class="stack-trace"><b>"java.lang.AssertionError: Test Failed
+	at com.lua.webbuyer.test.TestBuyer.compraSequencial(TestBuyer.java:40)
+<br/> java.lang.AssertionError: Test Failed
+	at com.lua.webbuyer.test.TestBuyer.compraSequencial(TestBuyer.java:40)
+"</b><br>com.lua.webbuyer.test.TestBuyer.compraSequencial(TestBuyer.java:40)<br>
 </div> <!-- stack-trace -->
+                  <em>
+(Simula duas compras feitas na mesma loja e com o mesmo usuário em sequência.)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-TestSuite-class-failed -->
-          <div class="suite-TestSuite-class-failed">
+          <div class="suite-TestSuite-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
+              <img src="passed.png"/>
               <span class="class-name">com.lua.webbuyer.test.TestLoginPage</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testeCompradois(Firefox, dfvfdvdv)">
-                  </a> <!-- testeCompradois(Firefox, dfvfdvdv) -->
+                  <a name="testeCompradois(Firefox, Pijama Snacks)">
+                  </a> <!-- testeCompradois(Firefox, Pijama Snacks) -->
                   <span class="method-name">testeCompradois</span>
-                  <span class="parameters">(Firefox, dfvfdvdv)</span>
-                  <div class="stack-trace"><b>"java.lang.AssertionError: Test Failed: Produto não encontrado: dfvfdvdv
-	at com.lua.webbuyer.actions.ActionsBuyer.productBuy(ActionsBuyer.java:68)
-	at com.lua.webbuyer.test.TestLoginPage.testeCompradois(TestLoginPage.java:44)
-<br/> java.lang.AssertionError: Test Failed: Produto não encontrado: dfvfdvdv
-	at com.lua.webbuyer.actions.ActionsBuyer.productBuy(ActionsBuyer.java:68)
-	at com.lua.webbuyer.test.TestLoginPage.testeCompradois(TestLoginPage.java:44)
-"</b><br>com.lua.webbuyer.actions.ActionsBuyer.productBuy(ActionsBuyer.java:68)<br>com.lua.webbuyer.test.TestLoginPage.testeCompradois(TestLoginPage.java:44)<br>
-</div> <!-- stack-trace -->
+                  <span class="parameters">(Firefox, Pijama Snacks)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-TestSuite-class-failed -->
+          </div> <!-- suite-TestSuite-class-passed -->
         </div> <!-- panel TestSuite -->
         <div panel-name="test-xml-TestSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/Users/andremartines/eclipse-workspace/Lua_Automation/src/SeleniumSources/SeleniumData.xml</span>
+            <span class="header-content">/Users/andremartines/eclipse-workspace/Lua_Automation/TestRunner.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -184,7 +185,7 @@
   &lt;/listeners&gt;
   &lt;test name=&quot;Teste Compras&quot;&gt;
     &lt;parameter name=&quot;itemColorCode&quot; value=&quot;11682&quot;/&gt;
-    &lt;parameter name=&quot;Product&quot; value=&quot;dfvfdvdv&quot;/&gt;
+    &lt;parameter name=&quot;Product&quot; value=&quot;Pijama Snacks&quot;/&gt;
     &lt;parameter name=&quot;Browser&quot; value=&quot;Firefox&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.lua.webbuyer.test.TestBuyer&quot;/&gt;
@@ -212,6 +213,14 @@
             <span class="header-content">Groups for TestSuite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="test-group">
+              <span class="test-group-name">Testes de compra</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">compraSequencial</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-TestSuite" class="panel">
@@ -230,18 +239,18 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testeCompradois')
-data.setCell(0, 2, 'com.lua.webbuyer.test.TestLoginPage')
-data.setCell(0, 3, 54505);
+data.setCell(0, 1, 'compraSequencial')
+data.setCell(0, 2, 'com.lua.webbuyer.test.TestBuyer')
+data.setCell(0, 3, 85226);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testeCompraSequencial')
-data.setCell(1, 2, 'com.lua.webbuyer.test.TestBuyer')
-data.setCell(1, 3, 51742);
+data.setCell(1, 1, 'testeCompradois')
+data.setCell(1, 2, 'com.lua.webbuyer.test.TestLoginPage')
+data.setCell(1, 3, 40557);
 window.suiteTableData['TestSuite']= { tableData: data, tableDiv: 'times-div-TestSuite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 2 minutes</span>
               <div id="times-div-TestSuite">
               </div> <!-- times-div-TestSuite -->
             </div> <!-- times-div -->
@@ -262,9 +271,9 @@ return data;
             <div class="ignored-class-div">
               <span class="ignored-class-name">com.lua.webbuyer.test.TestLoginPage</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">setup</span>
-                <br/>
                 <span class="ignored-method-name">cleanUp</span>
+                <br/>
+                <span class="ignored-method-name">setup</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -282,48 +291,46 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-method before">
-                <span class="method-name">register(public void com.lua.webbuyer.test.TestBuyer.testeCompraSequencial(java.lang.String,java.lang.String)...)</span>
-                <span class="method-start">609 ms</span>
+                <span class="method-name">register(public void com.lua.webbuyer.test.TestBuyer.compraSequencial(java.lang.String,java.lang.String), Fir...)</span>
+                <span class="method-start">472 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">testeCompraSequencial(Firefox, dfvfdvdv)</span>
-                <span class="method-start">9001 ms</span>
+                <span class="method-name">compraSequencial(Firefox, Pijama Snacks)</span>
+                <span class="method-start">6938 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">getResult([TestResult name=testeCompraSequencial status=FAILURE method=TestBuyer.testeCompraSequencial(java.la...)</span>
-                <span class="method-start">60747 ms</span>
+                <span class="method-name">getResult([TestResult name=compraSequencial status=FAILURE method=TestBuyer.compraSequencial(java.lang.String,...)</span>
+                <span class="method-start">92168 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.lua.webbuyer.test.TestLoginPage</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">register(public void com.lua.webbuyer.test.TestLoginPage.testeCompradois(java.lang.String,java.lang.String), ...)</span>
-                <span class="method-start">62071 ms</span>
+                <span class="method-start">93018 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">testeCompradois(Firefox, dfvfdvdv)</span>
-                <span class="method-start">67762 ms</span>
+                <span class="method-name">testeCompradois(Firefox, Pijama Snacks)</span>
+                <span class="method-start">97975 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">getResult([TestResult name=testeCompradois status=FAILURE method=TestLoginPage.testeCompradois(java.lang.Strin...)</span>
-                <span class="method-start">122268 ms</span>
+                <span class="method-name">getResult([TestResult name=testeCompradois status=SUCCESS method=TestLoginPage.testeCompradois(java.lang.Strin...)</span>
+                <span class="method-start">138534 ms</span>
               </div> <!-- configuration-method after -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.lua.webbuyer.test.TestBuyer</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">endSession</span>
-                <span class="method-start">123583 ms</span>
+                <span class="method-start">139700 ms</span>
               </div> <!-- configuration-test after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.lua.webbuyer.test.TestBuyer</div> <!-- chronological-class-name -->
               <div class="configuration-suite after">
                 <span class="method-name">cleanUp</span>
-                <span class="method-start">123761 ms</span>
+                <span class="method-start">139892 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
