Suite e primeiro teste pronto

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -23,7 +23,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -37,7 +37,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-TestSuite">
-              <span class="suite-name border-failed">TestSuite</span>
+              <span class="suite-name border-passed">TestSuite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -90,21 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-TestSuite" class="hide-methods failed suite-TestSuite"> (hide)</a> <!-- hide-methods failed suite-TestSuite -->
-                      <a href="#" panel-name="suite-TestSuite" class="show-methods failed suite-TestSuite"> (show)</a> <!-- show-methods failed suite-TestSuite -->
-                    </span>
-                    <div class="method-list-content failed suite-TestSuite">
-                      <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-TestSuite" title="com.lua.webbuyer.test.TestBuyer" hash-for-method="compraSequencial(Firefox, Pijama Snacks)">compraSequencial(Firefox, Pijama Snacks)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-TestSuite -->
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -115,7 +101,12 @@
                     <div class="method-list-content passed suite-TestSuite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-TestSuite" title="com.lua.webbuyer.test.TestLoginPage" hash-for-method="testeCompradois(Firefox, Pijama Snacks)">testeCompradois(Firefox, Pijama Snacks)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-TestSuite" title="com.lua.webbuyer.test.TestBuyer" hash-for-method="compraSequencial(Firefox, Pijama Adulto Spiderman)">compraSequencial(Firefox, Pijama Adulto Spiderman)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-TestSuite" title="com.lua.webbuyer.test.TestLoginPage" hash-for-method="testeCompradois(Firefox, Pijama Adulto Spiderman)">testeCompradois(Firefox, Pijama Adulto Spiderman)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-TestSuite -->
@@ -130,30 +121,24 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-TestSuite" class="panel TestSuite">
-          <div class="suite-TestSuite-class-failed">
+          <div class="suite-TestSuite-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
+              <img src="passed.png"/>
               <span class="class-name">com.lua.webbuyer.test.TestBuyer</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="compraSequencial(Firefox, Pijama Snacks)">
-                  </a> <!-- compraSequencial(Firefox, Pijama Snacks) -->
+                  <a name="compraSequencial(Firefox, Pijama Adulto Spiderman)">
+                  </a> <!-- compraSequencial(Firefox, Pijama Adulto Spiderman) -->
                   <span class="method-name">compraSequencial</span>
-                  <span class="parameters">(Firefox, Pijama Snacks)</span>
-                  <div class="stack-trace"><b>"java.lang.AssertionError: Test Failed
-	at com.lua.webbuyer.test.TestBuyer.compraSequencial(TestBuyer.java:40)
-<br/> java.lang.AssertionError: Test Failed
-	at com.lua.webbuyer.test.TestBuyer.compraSequencial(TestBuyer.java:40)
-"</b><br>com.lua.webbuyer.test.TestBuyer.compraSequencial(TestBuyer.java:40)<br>
-</div> <!-- stack-trace -->
+                  <span class="parameters">(Firefox, Pijama Adulto Spiderman)</span>
                   <em>
 (Simula duas compras feitas na mesma loja e com o mesmo usuário em sequência.)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-TestSuite-class-failed -->
+          </div> <!-- suite-TestSuite-class-passed -->
           <div class="suite-TestSuite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -162,10 +147,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testeCompradois(Firefox, Pijama Snacks)">
-                  </a> <!-- testeCompradois(Firefox, Pijama Snacks) -->
+                  <a name="testeCompradois(Firefox, Pijama Adulto Spiderman)">
+                  </a> <!-- testeCompradois(Firefox, Pijama Adulto Spiderman) -->
                   <span class="method-name">testeCompradois</span>
-                  <span class="parameters">(Firefox, Pijama Snacks)</span>
+                  <span class="parameters">(Firefox, Pijama Adulto Spiderman)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -185,7 +170,7 @@
   &lt;/listeners&gt;
   &lt;test name=&quot;Teste Compras&quot;&gt;
     &lt;parameter name=&quot;itemColorCode&quot; value=&quot;11682&quot;/&gt;
-    &lt;parameter name=&quot;Product&quot; value=&quot;Pijama Snacks&quot;/&gt;
+    &lt;parameter name=&quot;Product&quot; value=&quot;Pijama Adulto Spiderman&quot;/&gt;
     &lt;parameter name=&quot;Browser&quot; value=&quot;Firefox&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.lua.webbuyer.test.TestBuyer&quot;/&gt;
@@ -239,13 +224,13 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'compraSequencial')
-data.setCell(0, 2, 'com.lua.webbuyer.test.TestBuyer')
-data.setCell(0, 3, 85226);
+data.setCell(0, 1, 'testeCompradois')
+data.setCell(0, 2, 'com.lua.webbuyer.test.TestLoginPage')
+data.setCell(0, 3, 79443);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testeCompradois')
-data.setCell(1, 2, 'com.lua.webbuyer.test.TestLoginPage')
-data.setCell(1, 3, 40557);
+data.setCell(1, 1, 'compraSequencial')
+data.setCell(1, 2, 'com.lua.webbuyer.test.TestBuyer')
+data.setCell(1, 3, 77109);
 window.suiteTableData['TestSuite']= { tableData: data, tableDiv: 'times-div-TestSuite'}
 return data;
 }
@@ -292,45 +277,43 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-method before">
                 <span class="method-name">register(public void com.lua.webbuyer.test.TestBuyer.compraSequencial(java.lang.String,java.lang.String), Fir...)</span>
-                <span class="method-start">472 ms</span>
+                <span class="method-start">568 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">compraSequencial(Firefox, Pijama Snacks)</span>
-                <span class="method-start">6938 ms</span>
+                <span class="method-name">compraSequencial(Firefox, Pijama Adulto Spiderman)</span>
+                <span class="method-start">7152 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">getResult([TestResult name=compraSequencial status=FAILURE method=TestBuyer.compraSequencial(java.lang.String,...)</span>
-                <span class="method-start">92168 ms</span>
+                <span class="method-name">getResult([TestResult name=compraSequencial status=SUCCESS method=TestBuyer.compraSequencial(java.lang.String,...)</span>
+                <span class="method-start">84266 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.lua.webbuyer.test.TestLoginPage</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">register(public void com.lua.webbuyer.test.TestLoginPage.testeCompradois(java.lang.String,java.lang.String), ...)</span>
-                <span class="method-start">93018 ms</span>
+                <span class="method-start">85046 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">testeCompradois(Firefox, Pijama Snacks)</span>
-                <span class="method-start">97975 ms</span>
+                <span class="method-name">testeCompradois(Firefox, Pijama Adulto Spiderman)</span>
+                <span class="method-start">90335 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">getResult([TestResult name=testeCompradois status=SUCCESS method=TestLoginPage.testeCompradois(java.lang.Strin...)</span>
-                <span class="method-start">138534 ms</span>
+                <span class="method-start">169779 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">endSession</span>
-                <span class="method-start">139700 ms</span>
+                <span class="method-start">170475 ms</span>
               </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.lua.webbuyer.test.TestBuyer</div> <!-- chronological-class-name -->
               <div class="configuration-suite after">
                 <span class="method-name">cleanUp</span>
-                <span class="method-start">139892 ms</span>
+                <span class="method-start">170635 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
