--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -31,16 +31,15 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Teste Compras</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">139.2 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Teste Compras</td><td class="numi">2</td><td class="numi">2</td><td class="numi">0</td><td class="numi">0</td><td class="numi">169.9 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr><th colspan="4">Teste Compras &#8212; failed (configuration methods)</th></tr>
-<tr class="failedodd"><td rowspan="1">com.lua.webbuyer.test.TestLoginPage</td><td><a href="#m1"><b>endSession</b>  </a></td><td class="numi">1</td><td>1525896024745</td><td class="numi">0</td></tr>
-<tr><th colspan="4">Teste Compras &#8212; failed</th></tr>
-<tr class="failedodd"><td rowspan="1">com.lua.webbuyer.test.TestBuyer</td><td><a href="#m2"><b>compraSequencial</b> (Testes de compra) ("Simula duas compras feitas na mesma loja e com o mesmo usuário em sequência.")</a></td><td class="numi">1</td><td>1525895891983</td><td class="numi">85226</td></tr>
+<tr class="failedodd"><td rowspan="1">com.lua.webbuyer.test.TestLoginPage</td><td><a href="#m1"><b>endSession</b>  </a></td><td class="numi">1</td><td>1526071789034</td><td class="numi">0</td></tr>
 <tr><th colspan="4">Teste Compras &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="1">com.lua.webbuyer.test.TestLoginPage</td><td><a href="#m3"><b>testeCompradois</b>  </a></td><td class="numi">1</td><td>1525895983020</td><td class="numi">40557</td></tr>
+<tr class="passedodd"><td rowspan="1">com.lua.webbuyer.test.TestBuyer</td><td><a href="#m2"><b>compraSequencial</b> (Testes de compra) ("Simula duas compras feitas na mesma loja e com o mesmo usuário em sequência.")</a></td><td class="numi">1</td><td>1526071625711</td><td class="numi">77109</td></tr>
+<tr class="passedeven"><td rowspan="1">com.lua.webbuyer.test.TestLoginPage</td><td><a href="#m3"><b>testeCompradois</b>  </a></td><td class="numi">1</td><td>1526071708894</td><td class="numi">79443</td></tr>
 </table>
 <h1>Teste Compras</h1>
 <h2 id="m1">com.lua.webbuyer.test.TestLoginPage:endSession</h2>
@@ -55,20 +54,15 @@ com.lua.webbuyer.utils.Driver.finalyzeClass(Driver.java:31)
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr>
 <tr class="param stripe"><td>Firefox</td>
-<td>Pijama Snacks</td>
+<td>Pijama Adulto Spiderman</td>
 </tr>
-<tr><td style="padding-left:3em" colspan="2">
-<p>Test Failed</p>
-com.lua.webbuyer.test.TestBuyer.compraSequencial(TestBuyer.java:40)
-<br/>1 lines not shown
-</td></tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
 <h2 id="m3">com.lua.webbuyer.test.TestLoginPage:testeCompradois</h2>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr>
 <tr class="param stripe"><td>Firefox</td>
-<td>Pijama Snacks</td>
+<td>Pijama Adulto Spiderman</td>
 </tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
