Novos Testes Adicionados

--- a/test-output/old/TestSuite/classes.html
+++ b/test-output/old/TestSuite/classes.html
@@ -4,15 +4,46 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.lua.webbuyer.test.TestLoginPage</td>
+<td>com.lua.webbuyer.test.TestesNegativos</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testeCompradois</td>
-<td>&nbsp;</td></tr>
+<td>testeEmailEmBranco</td>
+<td>Teste Negativo </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testeEmailInvalido</td>
+<td>Teste Negativo </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testeCpfInvalido</td>
+<td>Teste Negativo </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testeNomeInvalido</td>
+<td>Teste Negativo </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testeCpfEmBranco</td>
+<td>Teste Negativo </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testeNomeEmBranco</td>
+<td>Teste Negativo </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testeSenhaCadastroEmBranco</td>
+<td>Teste Negativo </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -34,15 +65,15 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>com.lua.webbuyer.test.TestBuyer</td>
+<td>com.lua.webbuyer.test.TestesCompra</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>compraSequencial</td>
-<td>Testes de compra </td>
+<td>Fluxo_de_Compras</td>
+<td>Fluxo de Compras - Test </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
