--- a/test-output/old/TestSuite/methods-not-run.html
+++ b/test-output/old/TestSuite/methods-not-run.html
@@ -1,4 +1,7 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>com.lua.webbuyer.extent.reports.ReportsExtend.cleanUp</td></tr>
-<tr><td>com.lua.webbuyer.extent.reports.ReportsExtend.setup</td></tr>
+<tr><td>com.lua.webbuyer.extent.reports.ReportExtent.setup</td></tr>
+<tr><td>com.lua.webbuyer.extent.reports.ReportExtent.setup</td></tr>
+<tr><td>com.lua.webbuyer.test.TestesLoginPage.Fluxo_de_Cadastro<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Simula fluxo de cadastro completo.</i></td></tr>
+<tr><td>com.lua.webbuyer.extent.reports.ReportExtent.cleanUp</td></tr>
+<tr><td>com.lua.webbuyer.extent.reports.ReportExtent.cleanUp</td></tr>
 </table>
